--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+*{
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.container{
+  top: 0%;
+  left: 10%;
+  position: absolute;
+  transform: translate(50%,50%);
+  margin: 0 auto;
+  width: 256px;
+  text-align: center;
+  border: 10px solid #101111;
+  background-color: #101111;
+  border-radius: 5px;
+}
+.keypad{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-auto-rows: minmax(60px,auto);
+}
+input[type="text"]{
+  height: 75px;
+  width: 249px;
+  background-color: #10111600;
+  color: #fff;
+  text-align: right;
+  font-size: 25px;
+  font-weight: 700;
+  letter-spacing:  1px; 
+}
+#clear{
+  grid-column: 1/3;
+  grid-row: 1;
+  color: #262834;
+}
+#result{
+  grid-column: 3/5;
+  grid-row: 5;
+  color: #262834;
+}
+#backspace{
+  color: #262834;
+}
+button{
+  margin: 5px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #262834;
+  color: #fff;
+  font-weight: 500;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
+.highlight{
+  background:#56cdbd ;
 }
